sumo/tests/jtrrouter/errors/network/edge/lane/root__edge__lane#length__false22/errors.jtrrouter
Error: Attribute 'length' in definition of lane '2_1' is not a real number.
Quitting (on error).
